fix: fix z-index of header

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -9,6 +9,7 @@ header {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 4;
   background-color: var(--white);
   color: var(--cloudy);
 }
